--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="container">
     <div class="logo">
-            <h1>ADOTE AQUI SEU PET!</h1>
+            <h1>ADOTE AQUI SEU PET!!</h1>
         </div>
         <nav id="menu">
             <ul>
