--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SOBRE</a></li>
-                <li><a href="#">CONTATO</a></li>
-                <li><a href="#">DOAÇÕES</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Doações</a></li>
             </ul>
-    </nav>
+        </nav>
     </nav>
     
     <div class="imagem">
@@ -48,6 +48,10 @@
             <p class="descricao">Essa gatinha simpática e estilosa tem 1 ano!</p>
         </div>
     </div>
-    <div class="rodape"><span> 2021 © Todos os direitos reservados</span></div>
+
+    <footer>
+        <p class="copyright">&copy; Adote Aqui 2021. Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
