--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="estilos/reset.css" type="text/css" />
     <link rel="stylesheet" href="estilos/adoteaqui.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="imagens/Icon.jpg" type="image/x-icon">
     <title>Adote Aqui</title>
   </head>
   <body>
     <nav class="container">
+      <header>Resilia • Adote aqui seu pet 🖤</header>
       <div class="logo">
-        <h1>Adote aqui seu pet!</h1>
       </div>
       <nav id="menu">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Sobre</a></li>
           <li><a href="#">Contato</a></li>
-          <li><a href="#">Doações</a></li>
+          <li><a href="#">Adoções</a></li>
         </ul>
       </nav>
     </nav>
