--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img id="foto" src="imagens/Gato2.jpg" />
         <h2 class="titulo">Sam</h2>
         <br />
-        <p class="descricao">Essa gatinha simpática tem 1 ano!</p>
+        <p class="descricao">Essa gatinha simpática tem 2 anos!</p>
       </div>
     </div>
 
