--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="estilos/reset.css" type="text/css" />
-    <link rel="stylesheet" href="estilos/adoteaqui.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imagens/Icon.jpg" type="image/x-icon">
-    <title>Adote Aqui</title>
-  </head>
-  <body>
-    <nav class="container">
-      <header>Resilia • Adote aqui seu pet 🖤</header>
-      <div class="logo">
-      </div>
-      <nav id="menu">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contato</a></li>
-          <li><a href="#">Adoções</a></li>
-        </ul>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" href="estilos/reset.css" type="text/css" />
+  <link rel="stylesheet" href="estilos/adoteaqui.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="imagens/Icon.jpg" type="image/x-icon">
+  <title>Adote Aqui</title>
+</head>
+
+<body>
+  <nav class="container">
+    <header>Resilia • Adote aqui seu pet 🖤</header>
+    <div class="logo">
+    </div>
+    <nav id="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Adoções</a></li>
+      </ul>
     </nav>
+  </nav>
 
-    <div class="imagem">
-      <div>
-        <img id="foto" src="imagens/Cachorro3.jpg" />
-        <h2 class="titulo">Billie</h2>
-        <br />
-        <p class="descricao">Ele tem 4 anos e é muito carinhoso!</p>
-      </div>
-
-      <div>
-        <img id="foto" src="imagens/Cachorro8.jpg" />
-        <h2 class="titulo">Azura</h2>
-        <br />
-        <p class="descricao">Ela tem 2 anos e é a brincalhona da turma!</p>
-      </div>
-
-      <div>
-        <img id="foto" src="imagens/Cachorro2.jpg" />
-        <h2 class="titulo">Caramelo</h2>
-        <br />
-        <p class="descricao">Ele tem 2 anos e adora correr no parque!</p>
-      </div>
-
-      <div>
-        <img id="foto" src="imagens/Gato2.jpg" />
-        <h2 class="titulo">Sam</h2>
-        <br />
-        <p class="descricao">Essa gatinha simpática tem 2 anos!</p>
-      </div>
+  <div class="imagem">
+    <div>
+      <img id="foto" src="imagens/Cachorro3.jpg" />
+      <h2 class="titulo">Billie</h2>
+      <br />
+      <p class="descricao">Macho, 4 anos e é muito carinhoso!</p>
     </div>
 
-    <footer>
-      <p class="copyright">
-        &copy; Adote Aqui 2021. Todos os direitos reservados
-      </p>
-    </footer>
-  </body>
+    <div>
+      <img id="foto" src="imagens/Cachorro8.jpg" />
+      <h2 class="titulo">Azura</h2>
+      <br />
+      <p class="descricao">Fêmea, 2 anos e é a brincalhona da turma!</p>
+    </div>
+
+    <div>
+      <img id="foto" src="imagens/Cachorro2.jpg" />
+      <h2 class="titulo">Caramelo</h2>
+      <br />
+      <p class="descricao">Macho, 1 ano e adora correr no parque!</p>
+    </div>
+
+    <div>
+      <img id="foto" src="imagens/Gato2.jpg" />
+      <h2 class="titulo">Sam</h2>
+      <br />
+      <p class="descricao">Fêmea, 3 anos de puro estilo e simpatia!</p>
+    </div>
+  </div>
+
+  <footer>
+    <p class="copyright">
+      &copy; Adote Aqui 2021. Todos os direitos reservados
+    </p>
+  </footer>
+</body>
+
 </html>
